ci(publish): explicit permissions
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -1,12 +1,12 @@
-# This is copied from upstream and modified slightly
-# https://github.com/andrewslotin/go-proxy-pull-action/blob/master/README.md
-
 on:
   release:
     types:
       - created
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
+
+permissions:
+  content: read
 
 jobs:
   build:
