--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,4 +1,4 @@
-name: go-test
+name: benchmark
 
 on:
   push:
@@ -12,8 +12,8 @@ permissions:
   contents: read
 
 jobs:
-  go-test:
-    name: go-test
+  benchmark:
+    name: benchmark
     strategy:
       matrix:
         go-version: [1.24.x]
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/setup-go@v6
         with:
           go-version: ${{ matrix.go-version }}
-      - name: go-test
-        run: make test
+      - name: benchmark
+        run: make bench
