ci: appease the linter
There's a bug in gosec which is causing panics in golangci-lint.
Disabling the one check, which does not like our lex package.

Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,6 +12,10 @@ linters:
   disable:
     - depguard
     - unused
+  settings:
+    gosec:
+      excludes:
+        - G115 # conversion_overflow panics on rune constants (https://github.com/securego/gosec/issues/1502)
   exclusions:
     generated: lax
     presets:
